--- a/css/main.css
+++ b/css/main.css
@@ -30,8 +30,8 @@ header, main, footer {
 
 header, footer, footer a {
     text-align: center;
-    background-color:#8A6694;
-    color: whitesmoke;
+    background-color:#b49cbb;
+    color: rgb(0, 0, 0);
 }
 
 header img {
