--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ header, main, footer {
 
 header, footer, footer a {
     text-align: center;
-    background-color:#000000;
+    background-color:#e7c3e5;
     color: rgb(0, 0, 0);
 }
 
