--- a/css/main.css
+++ b/css/main.css
@@ -13,13 +13,13 @@ body {
 
 h1 {
     font-size: 2rem;
-    color:#321236;
+    color:#000000;
 }
 
 h2 {
     font-size: 1.5rem;
     text-align: center;
-    border-bottom: 2px solid #bbb;
+    border-bottom: 2px solid rgb(0, 0, 0);
 }
 
 header, main, footer {
@@ -30,7 +30,7 @@ header, main, footer {
 
 header, footer, footer a {
     text-align: center;
-    background-color:#ffb8fb;
+    background-color:#ff8484;
     color: rgb(0, 0, 0);
 }
 
