--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ header, main, footer {
 
 header, footer, footer a {
     text-align: center;
-    background-color:#fc7171;
+    background-color:#fa0000;
     color: rgb(0, 0, 0);
 }
 
