--- a/proyecto/html/css/proyecto.css
+++ b/proyecto/html/css/proyecto.css
@@ -137,7 +137,7 @@ header a:hover{
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     )
-    ,url("media/front-end.jpg");
+    ,url("imagenes/computadora.jpg");
 
 }
 
@@ -147,17 +147,7 @@ header a:hover{
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     )
-    ,url("imagenes/itx.png");
-}
-
-.carta:nth-child(3){
-    background-image: linear-gradient(
-        0deg,
-        rgba(0,0,0,0.5),
-        rgba(0,0,0,0.5)
-    )
-    ,url("media/python.jpg");
-
+    ,url("imagenes/segu.jpg");
 }
 
 #caracteristicas .container{
@@ -276,8 +266,8 @@ footer .container{
             rgba(0,0,0,0.5),
             rgba(0,0,0,0.5)
         )
-        ,url("media/front-end-cropped.jpg");
-
+        ,url("imagenes/computadora.jpg") ;
+        
     }
 
     .carta:nth-child(2){
@@ -286,21 +276,12 @@ footer .container{
             rgba(0,0,0,0.5),
             rgba(0,0,0,0.5)
         )
-        ,url("media/full-stack-cropped.jpg");
-    }
-
-    .carta:nth-child(3){
-        background-image: linear-gradient(
-            0deg,
-            rgba(0,0,0,0.5),
-            rgba(0,0,0,0.5)
-        )
-        ,url("media/python-cropped.jpg");
-
+        ,url("imagenes/segu.jpg");
+       
     }
 
     #caracteristicas{
-        background-image: url("media/background-2.jpeg");
+        background-image: url("imagenes/itx.png");
         background-repeat: no-repeat;
         background-size: 500px 400px;
         background-position: calc(100vw - 500px) 120px;
