--- a/proyecto/html/css/compu.css
+++ b/proyecto/html/css/compu.css
@@ -12,7 +12,8 @@ body{
 }
 
 h1{ font-size: 3.5em;}
-h2{ font-size: 2.7em;}
+h2{ font-size: 2.7em; 
+margin: 20px 0px;}
 h3{ font-size: 2em;}
 p{ font-size: 1.25em;}
 ul{ list-style: none;}
@@ -99,11 +100,6 @@ header a:hover{
     color: white;
 }
 
-#info .cuerpo{
-    text-align: center;
-    padding: 100px 12px;
-}
-
 #menu{
     background-color: rgb(30,30,30);
     color: white;
@@ -111,7 +107,7 @@ header a:hover{
 }
 
 #menu .cuerpo{
-    padding: 150px 12px;
+    padding: 50px 12px;
 }
 
 #menu h2{
@@ -127,8 +123,9 @@ header a:hover{
     background-position: center center;
     background-size: cover;
     padding: 50px 0px;
-    margin: 30px;
+    margin: 10px;
     border-radius: 15px;
+    font-size: 20px;
 }
 
 .division:first-child{
@@ -137,8 +134,6 @@ header a:hover{
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     )
-    ,url("imagenes/computadora.jpg");
-
 }
 
 .division:nth-child(2){
@@ -147,25 +142,15 @@ header a:hover{
         rgba(0,0,0,0.5),
         rgba(0,0,0,0.5)
     )
-    ,url("imagenes/camaras.jpg");
+}
+.division:nth-child(3){
+    background-image: linear-gradient(
+        0deg,
+        rgba(0,0,0,0.5),
+        rgba(0,0,0,0.5)
+    )
 }
 
-#cont .cuerpo{
-    text-align: center;
-    padding: 100px 12px;
-}
-
-#cont li  {
-    font-size: 30px;
-    margin: 20px 0px;
-    font-weight: bold;
-}
-#cont li ul li{
-    margin: 16px 0px;
-    font-weight: bold;
-    font-size: 15px;
-    margin: 10px -100px;
-}
 
 footer{
     background-color: rgb(230,230,230);
@@ -174,7 +159,7 @@ footer{
 footer p{
     margin: 0;
     padding: 12px;
-    color: rgb(100,100,100);
+    color: rgb(182, 42, 42);
 }
 
 footer .cuerpo{
@@ -205,34 +190,6 @@ footer .cuerpo{
         font-size: 5em;
     }
 
-    #info .cuerpo{
-        display: flex;
-        justify-content: space-evenly;
-    }
-
-    #info .texto{
-        width: 50%;
-        max-width: 600px;
-        text-align: initial;
-        padding-left: 30px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        text-align: justify;
-    }
-
-    #info h2{
-        margin-top: 0px;
-    }
-
-    #info .img{
-        background-image: url("imagenes/somos.jpg");
-        background-size: cover;
-        background-position: center center;
-        height: 500px;
-        width: 500px; 
-    }
-
     #menu .menu2{
         display: flex;
         justify-content: center;
@@ -252,22 +209,17 @@ footer .cuerpo{
     }
 
     #menu .division{
-        padding: 50px;
+        padding: 30px;
         background-size: 100% 150px;
-        background-repeat: no-repeat;
-        background-position-y: 0;
         background-color: rgba(50, 50, 50, 1);
         box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
     }
-
     .division:first-child{
         background-image: linear-gradient(
             0deg,
             rgba(0,0,0,0.5),
             rgba(0,0,0,0.5)
-        )
-        ,url("imagenes/computadora.jpg") ;
-        
+            )
     }
 
     .division:nth-child(2){
@@ -276,32 +228,17 @@ footer .cuerpo{
             rgba(0,0,0,0.5),
             rgba(0,0,0,0.5)
         )
-        ,url("imagenes/camaras.jpg");
-       
     }
-
-    #cont{
-        background-image: url("imagenes/cont.png");
-        background-repeat: no-repeat;
-        background-size: 500px 400px;
-        background-position: calc(100vw - 500px) 120px;
+    .division:nth-child(3){
+        background-image: linear-gradient(
+            0deg,
+            rgba(0,0,0,0.5),
+            rgba(0,0,0,0.5)
+        )
     }
-
-    #cont .cuerpo{
-        text-align: initial;
-    }
-
-    #cont ul{
-        margin-left: 100px;
-    }
-
+    
+    
     footer .cuerpo{
         justify-content: flex-end;
-    }
-}
-
-@media (min-width: 1200px) {
-    #cont{
-        background-position-x: calc(100vw - 700px);
     }
 }
